objects/SLC_Document_Type_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Communication_Sub_Type__c</fullName>
        <label>Communication Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Code__c</fullName>
        <label>Document Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pdf</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to true if this document type should never appear to the client in the portal</description>
        <inlineHelpText>Set this to true if this document type should never appear to the client in the portal</inlineHelpText>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Sub_Type__c</fullName>
        <label>Legal Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>FICA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding_Accessibility__c</fullName>
        <description>Determines whether this document type is external or internal. If external, the upload button will be available for the client on the portal and the internal user on Salesforce. If internal, the upload button will not be available for the client but will still be available for the internal user on Salesforce.</description>
        <label>Onboarding Accessibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presentation_Sub_Type__c</fullName>
        <label>Presentation Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Report Backs</fullName>
                </value>
                <value>
                    <fullName>Due Diligence</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Sub_Type__c</fullName>
        <label>Report Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly Reports</fullName>
                </value>
                <value>
                    <fullName>Monthly Reports</fullName>
                </value>
                <value>
                    <fullName>Weekly Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retrieval_Key__c</fullName>
        <label>Retrieval Key(s)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>accountNumber</fullName>
                </value>
                <value>
                    <fullName>financialAccountNumber</fullName>
                </value>
                <value>
                    <fullName>uniqueInternalCode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Presentations</fullName>
                </value>
                <value>
                    <fullName>CPD Certificates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Type Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Document_Code__c</columns>
        <columns>Extension__c</columns>
        <columns>Retrieval_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Document Type Mappings</pluralLabel>
</CustomObject>